[package]
name = "dcc-lsystem-derive"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/dcc-lsystem"
description = "Macro implementation of #[derive(TurtleContainer)]"
version = "0.1.2"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"