[package]
name = "dcc-lsystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/dcc-lsystem"
description = "An implementation of a Lindenmayer system together with some rendering tools"
version = "0.5.2"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
image = "0.21.2"
imageproc = "0.18.0"
regex = "1.0"
lazy_static = "1.3.0"
dcc-lsystem-derive = { version = "0.1.1",  path = "../dcc-lsystem-derive/" }
color_quant = "1.0.1"
gif = "0.10.2"
tempfile = "3.1.0"
pbr = "1.0.1"
rand = "0.7"
objekt = "0.1.2"
gifski = "0.8.7"