[package]
name = "dcc-lsystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/dcc-lsystem"
description = "An implementation of a Lindenmayer system together with some rendering tools"
version = "0.6.1"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
image = "0.22"
imageproc = "0.19"
regex = "1.3"
lazy_static = "1.4"
dcc-lsystem-derive = { version = "0.1",  path = "../dcc-lsystem-derive/" }
color_quant = "1.0"
gif = "0.10"
tempfile = "3.1"
pbr = "1.0"
rand = "0.7"
objekt = "0.1"
gifski = "0.8"