[package]
name = "dcc-lsystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/dcc-lsystem"
description = "An implementation of a Lindenmayer system together with some rendering tools"
version = "0.7.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
image = { version = "0.24", optional = true }
# Temporary branch until imageproc adds image 0.24 support.
imageproc = { git = "https://github.com/dcchut/imageproc.git", branch = "image_0_24_update", optional = true }
gif = { version = "0.11", optional = true }
gifski = { version = "1.4", optional = true }
mtpng = { version = "0.3", optional = true }
lodepng = { version = "3.6,>=3.6.1", optional = true }
tempfile = { version = "3.2", optional = true }
pbr = { version = "1.0", optional = true }
regex = "1.5"
lazy_static = "1.4"
dcc-lsystem-derive = "0.1"
rand = "0.8"
dyn-clone = "1.0"
thiserror = "1.0"

[features]
image_renderer = ["image", "imageproc", "gif", "gifski", "mtpng", "lodepng", "tempfile", "pbr"]
default = ["image_renderer"]

[[example]]
name = "cantor_set"
path = "examples/cantor_set.rs"
required-features = ["image_renderer"]

[[example]]
name = "dragon_curve"
path = "examples/dragon_curve.rs"
required-features = ["image_renderer"]

[[example]]
name = "fractal_binary_tree"
path = "examples/fractal_binary_tree.rs"
required-features = ["image_renderer"]

[[example]]
name = "fractal_plant"
path = "examples/fractal_plant.rs"
required-features = ["image_renderer"]

[[example]]
name = "koch_curve"
path = "examples/koch_curve.rs"
required-features = ["image_renderer"]

[[example]]
name = "koch_curve_video"
path = "examples/koch_curve_video.rs"
required-features = ["image_renderer"]

[[example]]
name = "random_fractal_generator"
path = "examples/random_fractal_generator.rs"
required-features = ["image_renderer"]

[[example]]
name = "sierpinski_arrowhead"
path = "examples/sierpinski_arrowhead.rs"
required-features = ["image_renderer"]

[[example]]
name = "sierpinski_triangle"
path = "examples/sierpinski_triangle.rs"
required-features = ["image_renderer"]

[[example]]
name = "dragon_curve_data"
path = "examples/dragon_curve_data.rs"

[badges]
github = { repository = "dcchut/dcc-lsystem" }
codecov =  { repository = "dcchut/dcc-lsystem" }
